--- a/Pós_Graduação_Perth_House.ipynb
+++ b/Pós_Graduação_Perth_House.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
-      "authorship_tag": "ABX9TyMiBvBbIlp/f6+w9AxmvtCP",
-      "include_colab_link": true
+      "authorship_tag": "ABX9TyMiBvBbIlp/f6+w9AxmvtCP"
     },
     "kernelspec": {
       "name": "python3",
@@ -18,16 +17,6 @@
     "accelerator": "GPU"
   },
   "cells": [
-    {
-      "cell_type": "markdown",
-      "metadata": {
-        "id": "view-in-github",
-        "colab_type": "text"
-      },
-      "source": [
-        "<a href=\"https://colab.research.google.com/github/Kudo-San/Estudos/blob/main/P%C3%B3s_Gradua%C3%A7%C3%A3o_Perth_House.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
-      ]
-    },
     {
       "cell_type": "markdown",
       "source": [
