Criado através do Colab

--- a/Dados_para_Plotagem_Dashboard.ipynb
+++ b/Dados_para_Plotagem_Dashboard.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOGQ7nFKXEFaJRjxRE6CVVh"
+      "authorship_tag": "ABX9TyMeoCCWIYfuVegSRCa1zfD3"
     },
     "kernelspec": {
       "name": "python3",
@@ -8123,9 +8123,7 @@
     {
       "cell_type": "markdown",
       "source": [
-        "# Relátoriode Análise VI\n",
-        "\n",
-        "## 18/01/22 Por: Marcelo kudo\n"
+        "# Relátoriode Análise VI\n"
       ],
       "metadata": {
         "id": "rmNxQq-6Nu11"
