Analisando_Dados_da_Empresa.ipynb

--- a/Analisando_Dados_da_Empresa.ipynb
+++ b/Analisando_Dados_da_Empresa.ipynb
@@ -31,7 +31,7 @@
       "source": [
         "#### Importar uma planilha de Excel usando a biblioteca `pandas` do Python\n",
         "\n",
-        "Agora que já importamos nosso pacote, é hora de caregarmos nossa planilha pra dentro do Colab. Para isso, baixe o arquivo disponível nos links úteis desta aula, abra a aba à esquerda aqui do seu navegador, e arraste o arquivo da planilha pra lá. Lembre-se, essses uploads são temporários, e terão que ser feitos novamente toda vez que o notebook for aberto.\n",
+        "Agora que já importamos nosso pacote, é hora de carregarmos nossa planilha pra dentro do Colab. Para isso, baixe o arquivo disponível nos links úteis desta aula, abra a aba à esquerda aqui do seu navegador, e arraste o arquivo da planilha pra lá. Lembre-se, essses uploads são temporários, e terão que ser feitos novamente toda vez que o notebook for aberto.\n",
         "\n",
         "Para ler arquivos excel usar função do pandas `pd.read_excel` e , ao carregar a planilha, vamos dar um nome a ela, associando o arquivo a uma variável.\n",
         "\n",
